# Mission-Forge

./: .gitignore  AGENTS.md  CLI_FOUNDATION_PLAN.md  PATHSPEC_DEPRECATION_FIX.md  README.md  development_roadmap.md  install.cmd  install.ps1  install.sh  missionforge_development_phases_with_context.md  missionforge_plan.md  pyproject.toml
.bob/: settings.json
.bob/commands/: mf-baseline.md  mf-decompose.md  mf-init.md  mf-mission.md  mf-next.md  mf-plan.md  mf-report.md  mf-validate.md
.bob/notes/: pending-notes.txt
.bob/rules-advanced/: AGENTS.md
.bob/rules-ask/: AGENTS.md
.bob/rules-code/: AGENTS.md
.bob/rules-plan/: AGENTS.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  cli-backend-feature.yml  cli-feature.yml  frontend-feature.yml  integration-demo.yml
.github/workflows/: auto-number-issue.yml  ci.yml  deploy-landing-page.yml
bob_sessions/LANDING_PAGE/: bob_task_may-17-2026_8-31-44-pm.md
bob_sessions/MF-002/: bob_task_may-17-2026_10-13-36-am.md  bob_task_may-17-2026_3-17-02-pm.md
bob_sessions/MF-003/: bob_task_may-17-2026_1-20-04-pm.md  bob_task_may-17-2026_1-42-53-pm.md
bob_sessions/MF-003-BUG-GH27/: bob_task_may-17-2026_3-52-21-pm.md
bob_sessions/MF-004/: bob_task_may-17-2026_1-09-19-pm.md  bob_task_may-17-2026_12-53-22-pm.md  bob_task_may-17-2026_3-07-29-pm.md
bob_sessions/MF-005/: AUDIT_REPORT.md  FINAL_SUMMARY.md  HOW_TO_SAVE_TRANSCRIPT.md  IMPLEMENTATION_SUMMARY.md  ORGANIZATIONAL_FIXES.md  PR_DESCRIPTION.md  PULL_REQUEST_AUDIT.md  bob_task_may-17-2026_3-00-00-pm.md
docs/: DECOMPOSE_COMMAND.md  REPORT_COMMAND.md
issues/: README.md  baseline-flow.md  board-backend.md  board-frontend.md  bob-skill-slash-commands.md  cli-foundation.md  cli-wrapper-endpoints.md  decompose-command.md  demo-mission-prep.md  demo-polish-submission.md  dependency-graph-view.md  git-test-utilities.md  mission-detail-panel.md  next-command.md  parent-validation.md  plan-command.md  report-generation.md  report-renderer.md  schemas-validators.md  stakeholder-translation.md  sub-mission-validation.md  watsonx-mission-chat.md  workspace-commands.md
landing-page/: index.html  missionforge-landing.html
missionforge/: SKILL.md
tests/: __init__.py  conftest.py  test_git_operations.py  test_path_matching.py  test_subprocess_utils.py  test_test_executor.py
(+154 files in other folders)
