[project]
name = "missionforge"
version = "0.1.0"
description = "AI-assisted mission decomposition and validation CLI"
readme = "README.md"
authors = [
    { name = "Benny Gil Lactaotao", email = "benny.gil999@gmail.com" },
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
"Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Utilities",
]
keywords = ["mission", "cli", "ai", "decompose", "workflow"]
dependencies = [
    "typer[all]>=0.9.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0.1",
    "jsonschema>=4.20.0",
    "jinja2>=3.1.2",
    "rich>=13.7.0",
    "pathspec>=0.11.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "black>=23.12.0",
    "ruff>=0.1.8",
    "mypy>=1.7.1",
]

[project.urls]
Repository = "https://github.com/loudiman/Mission-Forge"
Issues = "https://github.com/loudiman/Mission-Forge/issues"

[project.scripts]
missionforge = "missionforge.cli.app:cli_main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "UP017", # Use `datetime.UTC` alias (not available in Python 3.11)
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true